# logger

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/client/: client.hpp  connection.h  ipc.hpp
src/public/: buffer.hpp  message.hpp  role.hpp
src/server/: connection.h  ipc.hpp  server.h  serverManager.hpp
src/server/platform/PyQt/: genpyi.py  interface.cpp  interface.pyi  server.py
test/: test.cpp
